[ADD AND UPLOAD] agregado de carpeta imagenes y fotos nuevas, acutalizacion js para instertar las mismas

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 
 #header {
-    background-image: url("../assets/fondo2.jpg");
+    background-image: url("../imagenes/fondo2.jpg");
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
